[package]
name = "tiger"
version = "0.2.0"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
edition = "2018"

[dependencies]
dunce = "0.1.1"
euclid = { git = "https://github.com/servo/euclid" }
failure = "0.1.3"
gfx = "0.18"
gfx_core = "0.9.0"
gfx_device_gl = "0.16"
gfx_window_glutin = "0.30"
image = "0.20"
imgui = { git = "https://github.com/agersant/imgui-rs" }
imgui-gfx-renderer = { git = "https://github.com/agersant/imgui-rs" }
imgui-winit-support = { git = "https://github.com/agersant/imgui-rs" }
liquid = "0.17"
nfd = "0.0.4"
pathdiff = "0.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
texture_packer = "0.15"

[dependencies.glutin]
version = "0.20.0"
features = [ "icon_loading" ]
