[package]
name = "tiger"
version = "0.3.0-wip"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
edition = "2018"

[dependencies]
euclid = "0.20"
failure = "0.1.3"
gfx = "0.18"
gfx_core = "0.9.0"
gfx_device_gl = "0.16"
gfx_window_glutin = "0.31"
image = "0.22"
imgui = "0.2.0"
imgui-gfx-renderer = "0.2.0"
imgui-winit-support = "0.2.0"
liquid = "0.19"
nfd = "0.0.4"
notify = "4.0.10"
pathdiff = "0.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
texture_packer = "0.17"

[dependencies.glutin]
version = "0.21"
features = [ "icon_loading" ]
