[package]
name = "tiger"
version = "0.3.0-wip"
authors = ["Antoine Gersant <antoine.gersant@lesforges.org>"]
edition = "2018"

[dependencies]
euclid = "0.22"
failure = "0.1.3"
glium = "0.29"
image = "0.23"
imgui = "0.6.1"
imgui-glium-renderer = "0.6.1"
imgui-winit-support = "0.6.1"
liquid = "0.21"
nfd = "0.0.4"
notify = "4.0.10"
pathdiff = "0.2.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
texture_packer = "0.21"